# robotframework-aiagent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
aiagent-slim/: pyproject.toml
examples/: pyproject.toml
examples/src/AIAgent/Examples/: PlaywrightMCP.py  WeatherTools.py
examples/src/AIAgentExamples/: WeatherTools.py
examples/tests/: conversation.robot  ensemble and arbitration.robot  first.robot  image_generation.robot  simple.robot  wheater.robot
tests/: simple.robot
